--- a/src/components/ChangePassword/ChangePassword.scss
+++ b/src/components/ChangePassword/ChangePassword.scss
@@ -7,6 +7,11 @@
         color: $clr-orange-light;
         font-size: 35px;
         font-weight: 600;
+
+        @media screen and (max-width: 576px) {
+            font-size: 25px;
+            margin-top: 10px;
+        }
     }
 
     .btn-login {
@@ -15,24 +20,39 @@
         font-size: 20px;
     }
 
-    .input-group {
-        border: 1px solid gray;
-        display: flex;
-        align-items: center;
-        padding: 0 10px;
-
-        input {
-            border: none;
-            margin: 0 10px 0 0 !important;
-
-            &:focus {
-                box-shadow: none;
-            }
+    .card-body {
+        @media screen and (max-width: 576px) {
+            padding: 10px 0 !important;
         }
+        .input-group {
+            border: 1px solid gray;
+            display: flex;
+            align-items: center;
+            padding: 0 10px;
 
-        .btn-eye {
-            cursor: pointer;
-            color: rgb(52, 52, 52);
+            .input-group-text {
+                @media screen and (max-width: 576px) {
+                    font-size: 18px !important;
+                }
+            }
+
+            input {
+                border: none;
+                margin: 0 10px 0 0 !important;
+
+                &:focus {
+                    box-shadow: none;
+                }
+
+                @media screen and (max-width: 576px) {
+                    font-size: 18px !important;
+                }
+            }
+
+            .btn-eye {
+                cursor: pointer;
+                color: rgb(52, 52, 52);
+            }
         }
     }
 }
