sửa lại 1 vài lỗi nhỏ

--- a/src/Systems/ManageSupplier/ManageSupplier.scss
+++ b/src/Systems/ManageSupplier/ManageSupplier.scss
@@ -72,9 +72,12 @@
     }
 
     .supplier-footer {
-        margin: auto;
-        width: 42%;
+        margin: 30px auto auto auto;
+        @media screen and (max-width: 1545px) {
+            width: 90vw;
+        }
         .pagination {
+            justify-content: center;
             .page-item {
                 &.active {
                     .page-link {
