--- a/src/Systems/ManageBrand/ManageBrand.scss
+++ b/src/Systems/ManageBrand/ManageBrand.scss
@@ -79,9 +79,12 @@
     }
 
     .brand-footer {
-        margin: auto;
-        width: 42%;
+        margin: 30px auto auto auto;
+        @media screen and (max-width: 1545px) {
+            width: 90vw;
+        }
         .pagination {
+            justify-content: center;
             .page-item {
                 &.active {
                     .page-link {
