--- a/src/Systems/ManageEmployee/ManageEmployee.scss
+++ b/src/Systems/ManageEmployee/ManageEmployee.scss
@@ -70,11 +70,13 @@
             }
         }
     }
-
     .employee-footer {
-        margin: auto;
-        width: 42%;
+        margin: 30px auto auto auto;
+        @media screen and (max-width: 1545px) {
+            width: 90vw;
+        }
         .pagination {
+            justify-content: center;
             .page-item {
                 &.active {
                     .page-link {
