--- a/src/Systems/ManageImportReceipt/ManageImportReceipt.scss
+++ b/src/Systems/ManageImportReceipt/ManageImportReceipt.scss
@@ -93,11 +93,13 @@
             padding: 4px 20px;
         }
     }
-
     .import-receipt-footer {
-        margin: auto;
-        width: 42%;
+        margin: 30px auto auto auto;
+        @media screen and (max-width: 1545px) {
+            width: 90vw;
+        }
         .pagination {
+            justify-content: center;
             .page-item {
                 &.active {
                     .page-link {
