--- a/src/Systems/ManageProductParameters/ManageProductParameters.scss
+++ b/src/Systems/ManageProductParameters/ManageProductParameters.scss
@@ -1,6 +1,6 @@
 @import '../../App.scss';
 
-.manage-order-container {
+.manage-product-container {
     grid-area: main;
     overflow-y: auto;
     padding: 20px 20px;
@@ -12,13 +12,13 @@
         font-weight: 600;
     }
 
-    .order-header {
+    .product-header {
         display: flex;
         justify-content: space-between;
         align-items: center;
         padding: 0 50px;
         margin: 40px 0 20px 0;
-        .order-title {
+        .product-title {
             h3 {
                 font-size: 24px;
                 color: rgb(0, 0, 255);
@@ -46,8 +46,19 @@
         }
     }
 
-    .order-body {
-        font-size: 16px;
+    .search-box {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        width: 40%;
+        margin: 40px 0 40px 50px;
+
+        .search {
+            flex: 1;
+        }
+    }
+
+    .product-body {
         .btn-action {
             button {
                 font-size: 20px;
@@ -69,36 +80,16 @@
             tr {
                 padding: 15px;
             }
-
-            .text-center {
-                margin: auto;
-                height: 100px;
-                text-align: center;
-            }
         }
     }
 
-    .box-order {
-        display: none;
-    }
-
-    .box-search {
-        font-size: 20px;
-        display: flex;
-        padding-left: 50px;
-        gap: 15px;
-        margin-bottom: 20px;
-
-        .select-search {
-            border: 1px solid rgb(176, 176, 176);
-            padding: 4px 20px;
-        }
-    }
-    .order-footer {
-        margin: 30px auto auto auto;
+    .product-footer {
+        margin: auto;
         @media screen and (max-width: 1545px) {
             width: 90vw;
         }
+
+        margin-bottom: 50px;
         .pagination {
             justify-content: center;
             .page-item {
