- thêm sửa địa chỉ giao hàng trong ModalOrder - thêm lọc sp theo khoảng giá trong HomePage - sửa lại SearchPage (cho tìm kiếm khi chưa đăng nhập) - thêm thông tin thanh toán qua cổng nào đối với thanh toán online (ManageOrder)

--- a/src/Systems/ManageImportReceipt/ImportReceiptNote.scss
+++ b/src/Systems/ManageImportReceipt/ImportReceiptNote.scss
@@ -1,3 +1,5 @@
+@import '../../App.scss';
+
 .import-receipt-note {
     width: 100%;
     padding: 10px 10px;
@@ -32,6 +34,18 @@
 
                 .btn-add {
                     font-size: 16px;
+                }
+            }
+
+            .btn-add-supplier {
+                margin-left: 10px;
+                color: gray;
+                cursor: pointer;
+
+                &:hover {
+                    color: $clr-danger;
+                    transition: $transition-ease;
+                    transform: scale(1.05);
                 }
             }
 
