--- a/src/Systems/ManageOrder/OrderPrint.scss
+++ b/src/Systems/ManageOrder/OrderPrint.scss
@@ -92,7 +92,7 @@
         font-size: 18px;
         display: flex;
         justify-content: space-between;
-        padding: 0 150px;
+        padding: 0 100px;
         margin: 30px 0 100px 0;
 
         .box {
@@ -105,9 +105,16 @@
                     font-weight: 600;
                     text-transform: uppercase;
                 }
-                &:last-child {
+
+                &:nth-of-type(2) {
                     font-size: 14px;
                 }
+            }
+            .signature-name {
+                margin-top: 40px;
+                font-size: 26px !important;
+                font-weight: 600;
+                font-style: normal !important;
             }
         }
     }
