- thêm gợi ý sản phẩm trong ProductSinglePage - thêm thống kê báo cáo theo từng tuần theo tháng

--- a/src/pages/ProductSinglePage/ProductSinglePage.scss
+++ b/src/pages/ProductSinglePage/ProductSinglePage.scss
@@ -324,6 +324,10 @@
             }
         }
     }
+
+    .title-md {
+        margin: 40px 0 20px 0;
+    }
 }
 
 @media screen and (max-width: 992px) {
