--- a/src/Systems/HomeAdmin/HomeAdmin.scss
+++ b/src/Systems/HomeAdmin/HomeAdmin.scss
@@ -58,5 +58,19 @@
             font-size: 24px;
             font-weight: 600;
         }
+
+        .box-select-revenue {
+            margin-left: 50px;
+            select {
+                border: 1px solid gray;
+                padding: 10px 15px;
+                border-radius: 6px;
+                font-size: 18px;
+            }
+
+            .select-mode {
+                margin-right: 20px;
+            }
+        }
     }
 }
