--- a/src/components/BrandList/BrandList.scss
+++ b/src/components/BrandList/BrandList.scss
@@ -18,8 +18,13 @@
         height: 48px;
         width: 137px;
         justify-content: center;
-        margin: 0 20px 10px 0;
+        margin: 0 18px 10px 0;
         padding: 2px 4px;
+        background-color: white;
+
+        img {
+            object-fit: contain;
+        }
 
         @media screen and (max-width: 576px) {
             // nhỏ hơn 576
