--- a/src/pages/BrandProductPage/BrandProductPage.scss
+++ b/src/pages/BrandProductPage/BrandProductPage.scss
@@ -17,12 +17,14 @@
                 height: 48px;
                 width: 137px;
                 justify-content: center;
-                margin: 0 20px 10px 10px;
+                margin: 0 20px 10px 20px;
                 padding: 2px 4px;
+                border: 1px solid #d1d1d1;
 
                 img {
                     width: 100%;
                     height: 100%;
+                    object-fit: contain;
                 }
             }
         }
