- chức năng quên mật khẩu - chức năng hiện ds sp theo danh mục sản phẩm

--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -75,9 +75,9 @@
 
     .product-footer {
         margin: auto;
-        @media screen and (max-width: 1545px) {
-            width: 90vw;
-        }
+        // @media screen and (max-width: 1545px) {
+        //     width: 90vw;
+        // }
 
         margin-bottom: 50px;
         .pagination {
