--- a/src/components/Register/Register.scss
+++ b/src/components/Register/Register.scss
@@ -43,13 +43,33 @@
     }
 
     .input-group {
-        @media screen and (max-width: 576px) {
-            span {
-                font-size: 18px;
+        border: 1px solid gray;
+        display: flex;
+        align-items: center;
+        padding: 0 10px;
+
+        .input-group-text {
+            @media screen and (max-width: 576px) {
+                font-size: 18px !important;
             }
-            input {
-                font-size: 18px;
+        }
+
+        input {
+            border: none;
+            margin: 0 10px 0 0 !important;
+
+            &:focus {
+                box-shadow: none;
             }
+
+            @media screen and (max-width: 576px) {
+                font-size: 18px !important;
+            }
+        }
+
+        .btn-eye {
+            cursor: pointer;
+            color: rgb(52, 52, 52);
         }
     }
 }
