--- a/src/Systems/ManageImportReceipt/ManageImportReceipt.scss
+++ b/src/Systems/ManageImportReceipt/ManageImportReceipt.scss
@@ -1,4 +1,5 @@
-@import '../../App.scss';
+@use 'sass:color';
+@use '../../App.scss' as *;
 
 .manage-import-receipt-container {
     grid-area: main;
