--- a/src/components/CartModal/CartModal.scss
+++ b/src/components/CartModal/CartModal.scss
@@ -1,4 +1,5 @@
-@import '../../App.scss';
+@use 'sass:color';
+@use '../../App.scss' as *;
 
 .cart-modal {
     position: absolute;
@@ -26,7 +27,7 @@
     }
     &::-webkit-scrollbar-thumb {
         border-radius: 10px;
-        background-color: lighten($clr-light-orange, 5%);
+        background-color: color.adjust($clr-light-orange, $lightness: 5%);
         outline: 1px solid $clr-light-orange;
     }
 
