--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -1,4 +1,5 @@
-@import '../../App.scss';
+@use 'sass:color';
+@use '../../App.scss' as *;
 
 .product-item {
     position: relative;
@@ -100,7 +101,7 @@
                 font-size: 14px;
             }
             .new-price {
-                color: lighten($clr-orange, 10%);
+                color: color.adjust($clr-orange, $lightness: 5%);
                 margin: 0 1rem;
                 font-weight: 700;
                 font-size: 20px;
@@ -109,7 +110,7 @@
                 font-size: 13px;
                 font-weight: 600;
                 font-family: $font-family-poppins;
-                color: darken($clr-orange, 5%);
+                color: color.adjust($clr-orange, $lightness: -5%);
             }
 
             &::after {
@@ -117,7 +118,7 @@
                 position: absolute;
                 top: calc(100% + 6px);
                 height: 1px;
-                background-color: lighten($clr-orange, 10%);
+                background-color: color.adjust($clr-orange, $lightness: 5%);
                 width: 60px;
             }
         }
