--- a/src/components/PurchaseOrder/PurchaseOrder.scss
+++ b/src/components/PurchaseOrder/PurchaseOrder.scss
@@ -1,4 +1,5 @@
-@import '../../App.scss';
+@use 'sass:color';
+@use '../../App.scss' as *;
 
 .container-purchase {
     background-color: #f5f5f5;
@@ -90,19 +91,27 @@
                             justify-content: flex-start !important;
                             margin-top: 10px;
                         }
-                        .info-1 {
-                            align-items: center;
-                            border-right: 1px solid rgba(0, 0, 0, 0.12);
-                            display: flex;
-                            margin: 0 10px 0 0;
-                            padding: 0 5px 0 0;
-                            text-align: right;
-                            color: #26aa99;
-                            font-size: 16px;
-                            gap: 5px;
 
-                            @media screen and (max-width: 768px) {
-                                font-size: 14px;
+                        .time-info {
+                            margin: 0 10px 0 0;
+                            .info-1 {
+                                align-items: center;
+                                border-right: 1px solid rgba(0, 0, 0, 0.12);
+                                display: flex;
+
+                                padding: 0 5px 0 0;
+                                text-align: right;
+                                color: #26aa99;
+                                font-size: 16px;
+                                gap: 5px;
+
+                                @media screen and (max-width: 768px) {
+                                    font-size: 14px;
+                                }
+                            }
+
+                            .time {
+                                font-size: 12px;
                             }
                         }
 
