--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,4 +1,5 @@
-@import '../../App.scss';
+@use 'sass:color';
+@use '../../App.scss' as *;
 
 .sidebar {
     position: fixed;
@@ -59,7 +60,7 @@
         }
         &::-webkit-scrollbar-thumb {
             border-radius: 10px;
-            background-color: lighten($clr-light-orange, 5%);
+            background-color: color.adjust($clr-light-orange, $lightness: 5%);
             outline: 1px solid $clr-light-orange;
         }
     }
