--- a/src/components/UserProfile/UserProfile.scss
+++ b/src/components/UserProfile/UserProfile.scss
@@ -1,4 +1,6 @@
-@import '../../App.scss';
+@use 'sass:color';
+@use '../../App.scss' as *;
+
 .container-profile {
     background-color: white;
     padding: 10px 130px;
