--- a/src/pages/CartPage/CartPage.scss
+++ b/src/pages/CartPage/CartPage.scss
@@ -1,4 +1,5 @@
-@import '../../App.scss';
+@use 'sass:color';
+@use '../../App.scss' as *;
 
 .empty-cart {
     min-height: 60vh;
@@ -34,7 +35,7 @@
     }
     &::-webkit-scrollbar-thumb {
         border-radius: 10px;
-        background-color: lighten($clr-light-orange, 5%);
+        background-color: color.adjust($clr-light-orange, $lightness: 5%);
         outline: 1px solid $clr-light-orange;
     }
 
