--- a/src/pages/ProductSinglePage/ProductSinglePage.scss
+++ b/src/pages/ProductSinglePage/ProductSinglePage.scss
@@ -1,4 +1,5 @@
-@import '../../App.scss';
+@use 'sass:color';
+@use '../../App.scss' as *;
 
 // từ 993 -> ...
 .product-single {
@@ -29,7 +30,7 @@
                     }
                     &::-webkit-scrollbar-thumb {
                         border-radius: 10px;
-                        background-color: lighten($clr-light-orange, 5%);
+                        background-color: color.adjust($clr-light-orange, $lightness: 5%);
                         outline: 1px solid $clr-light-orange;
                     }
 
@@ -356,7 +357,7 @@
 
                     .price {
                         background-color: rgba(0, 0, 0, 0.02);
-                        padding: 2rem;
+                        padding: 0;
                         .old-price {
                             text-decoration: line-through;
                         }
@@ -378,14 +379,23 @@
                                     margin-top: 2px;
                                 }
                             }
-                            .box-stock {
-                                font-size: 18px;
-                                padding-left: 4px;
-                                margin-right: auto;
-                                span {
-                                    font-weight: 700;
-                                }
+                        }
+                    }
+
+                    .box-more-info {
+                        margin-top: 10px;
+                        display: flex;
+                        justify-content: space-between;
+                        font-size: 20px;
+                        .box-stock {
+                            font-size: 18px;
+                            padding-left: 4px;
+                            margin-right: auto;
+                            span {
+                                font-weight: 700;
                             }
+                        }
+                        .warranty {
                         }
                     }
 
