- sửa lại file scss

--- a/src/Systems/ManagePromotion/ManagePromotion.scss
+++ b/src/Systems/ManagePromotion/ManagePromotion.scss
@@ -86,9 +86,9 @@
 
     .promotion-footer {
         margin: 30px auto auto auto;
-        @media screen and (max-width: 1545px) {
-            width: 90vw;
-        }
+        // @media screen and (max-width: 1545px) {
+        //     width: 90vw;
+        // }
         .pagination {
             justify-content: center;
             .page-item {
