--- a/src/Systems/ManageBrand/ManageBrand.scss
+++ b/src/Systems/ManageBrand/ManageBrand.scss
@@ -81,9 +81,9 @@
 
     .brand-footer {
         margin: 30px auto auto auto;
-        @media screen and (max-width: 1545px) {
-            width: 90vw;
-        }
+        // @media screen and (max-width: 1545px) {
+        //     width: 90vw;
+        // }
         .pagination {
             justify-content: center;
             .page-item {
