--- a/src/Systems/ManageImportReceipt/ManageImportReceipt.scss
+++ b/src/Systems/ManageImportReceipt/ManageImportReceipt.scss
@@ -96,9 +96,9 @@
     }
     .import-receipt-footer {
         margin: 30px auto auto auto;
-        @media screen and (max-width: 1545px) {
-            width: 90vw;
-        }
+        // @media screen and (max-width: 1545px) {
+        //     width: 90vw;
+        // }
         .pagination {
             justify-content: center;
             .page-item {
