--- a/src/components/PurchaseOrder/PurchaseOrder.scss
+++ b/src/components/PurchaseOrder/PurchaseOrder.scss
@@ -93,12 +93,11 @@
                         }
 
                         .time-info {
-                            margin: 0 10px 0 0;
+                            padding: 0 10px 0 0;
+                            border-right: 1px solid rgba(0, 0, 0, 0.12);
                             .info-1 {
                                 align-items: center;
-                                border-right: 1px solid rgba(0, 0, 0, 0.12);
                                 display: flex;
-
                                 padding: 0 5px 0 0;
                                 text-align: right;
                                 color: #26aa99;
@@ -115,12 +114,19 @@
                             }
                         }
 
+                        .confirm {
+                            font-size: 16px;
+                            border-right: 1px solid rgba(0, 0, 0, 0.12);
+                            padding: 0 10px 0 0;
+                        }
+
                         .info-2 {
                             color: #ee4d2d;
                             line-height: 24px;
                             text-align: right;
                             text-transform: uppercase;
                             white-space: nowrap;
+                            padding: 0 0 0 10px;
                         }
                     }
                 }
